--- a/static/graphics/graphics-manifest.json
+++ b/static/graphics/graphics-manifest.json
@@ -3,17 +3,21 @@
     "static/graphics/1912/2024 Game Shirt.png",
     "static/graphics/1912/2024 Team Shirt.png",
     "static/graphics/1912/Pulsar Sketch.png",
+    "static/graphics/1912/Pulsar Thumbnail.png",
     "static/graphics/1912/Pit Design.png",
     "static/graphics/1912/Jobs Poster.png",
+    "static/graphics/1912/More Than Robots.png",
     "static/graphics/1912/Jimmy Sketch.png",
     "static/graphics/1912/Poster 3.png",
     "static/graphics/1912/Poster 2.png",
     "static/graphics/1912/Poster 1.png",
     "static/graphics/1912/2023 Pin 1.png",
-    "static/graphics/1912/2023 Pin 2.png"
+    "static/graphics/1912/2023 Pin 2.png",
+    "static/graphics/1912/2024 Burnie Pin.png"
   ],
   "nc2": [
     "static/graphics/nc2/Logo.png",
+    "static/graphics/nc2/Features.png",
     "static/graphics/nc2/GOM SST.gif",
     "static/graphics/nc2/GOM Vert Section.png",
     "static/graphics/nc2/Europe Wind Comp.png",
@@ -26,5 +30,11 @@
     "static/graphics/peekorobo/Dozer.png",
     "static/graphics/peekorobo/Mobile Home Page.png",
     "static/graphics/peekorobo/Home Page.png"
+  ],
+  "csvue": [
+    "static/graphics/csvue/Logo.png",
+    "static/graphics/csvue/Table.png",
+    "static/graphics/csvue/Visualization.png",
+    "static/graphics/csvue/Statistics.png"
   ]
 } 
